--- a/styles.css
+++ b/styles.css
@@ -1,38 +1,38 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .page {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .section {
-    width: 100%;
-    height: 300px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .menu {
-    background-color: #5995DA;
-    height: 80px;
+  background-color: #5995DA;
+  height: 80px;
 }
 
 .header {
-    background-color: #B2D6FF;
+  background-color: #B2D6FF;
 }
 
 .content {
-    background-color: #EAEDF0;
-    height: 600px;
+  background-color: #EAEDF0;
+  height: 600px;
 }
 
 .sign-up {
-    background-color: #D6E9FE;
+  background-color: #D6E9FE;
 }
 
 .feature-1 {
@@ -47,52 +47,58 @@
   background-color: #C8C6FA;
 }
 
-/* Mobile Styles */
-@media only screen and (max-width: 400px) {
-    body {
-      background-color: #F09A9D; /* Red */
-    }
-}
-
-/* TABLET STYLES */
-@media only screen and (min-width: 401px) and (max-width: 960px) {
-    .sign-up,
-    .feature-1,
-    .feature-2,
-    .feature-3 {
-        width: 50%;
-    }
-}
-
-/* DESKTOP STYLES */
-@media only screen and (min-width: 961px){
-
-    .page {
-        width: 960px;
-        margin: 0 auto;
-    }
-
-    .feature-1,
-    .feature-2,
-    .feature-3 {
-        width: 33.3%;
-    }
-
-    .header{
-        height: 400px;
-    }
-
-    .sign-up {
-        height: 200px;
-        order: 1;
-    }
-
-    .content {
-        order: 2;
-    }
-}
-
 .illustration img {
     width: 100%;
     display: block;
+  }
+
+.header {
+  height: auto;
+  justify-content: inherit;
+  align-items: inherit;
+}
+
+.photo img {
+  width: 100%;
+  display: block;
+}
+
+/* Mobile Styles */
+@media only screen and (max-width: 400px) {
+  body {
+    background-color: #F09A9D; /* Red */
+  }
+}
+
+/* Tablet Styles */
+@media only screen and (min-width: 401px) and (max-width: 960px) {
+  .sign-up,
+  .feature-1,
+  .feature-2,
+  .feature-3 {
+    width: 50%;
+  }
+}
+
+/* Desktop Styles */
+@media only screen and (min-width: 961px) {
+  .page {
+    width: 960px;
+    margin: 0 auto;
+  }
+  .feature-1,
+  .feature-2,
+  .feature-3 {
+    width: 33.3%;
+  }
+  .header {
+    height: 400px;
+  }
+  .sign-up {
+    height: 200px;
+    order: 1;
+  }
+  .content {
+    order: 2;
+  }
 }
